# semita_finder

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
backend/core/: admin.py  models.py
backend/core/fixtures/: demo_data.json
backend/core/permisions/: base.py
backend/core/serializers/: comercio.py  movimiento.py  pedido.py  producto.py  usuario.py
backend/core/urls/: auth_urls.py  comercio_urls.py  pedido_urls.py  producto_urls.py
backend/core/utils/: constants.py
backend/core/views/: auth.py  comercio.py  pedido.py  producto.py  utils.py
backend/semitafinder/: asgi.py  db.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile
frontend/semita-finder-frontend/: package-lock.json  package.json  vite.config.js
frontend/semita-finder-frontend/src/: main.js
frontend/semita-finder-frontend/src/components/: ComercioForm.vue  ComerciosCercanos.vue  DiaHorario.vue  EstadoComercio.vue  Mapa.vue  Navbar.vue  ProductoForm.vue  TablaHorarios.vue
frontend/semita-finder-frontend/src/router/: index.js
frontend/semita-finder-frontend/src/services/: api.js
frontend/semita-finder-frontend/src/store/: auth.js  comercioStore.js
frontend/semita-finder-frontend/src/views/: ComercioDetalleView.vue  ConfiguracionView.vue  EditarComercioView.vue  EditarProductoView.vue  HomeView.vue  HorarioFormView.vue  LoginView.vue  MisPedidosView.vue  NosotrosView.vue  NuevoComercioView.vue  NuevoPedidoView.vue  NuevoProductoView.vue  PedidoDetalleView.vue  (+2 more)
